@@ -8,13 +8,17 @@ import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.channel.unions.GuildMessageChannelUnion;
 import net.dv8tion.jda.api.utils.FileUpload;
 import org.apache.commons.io.IOUtils;
+import org.jcodec.api.awt.AWTSequenceEncoder;
+import org.jcodec.common.io.ByteBufferSeekableByteChannel;
+import org.jcodec.common.io.NIOUtils;
+import org.jcodec.common.io.SeekableByteChannel;
+import org.jcodec.common.model.Rational;
 import org.jetbrains.annotations.NotNull;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
-import xyz.n7mn.dev.earthquake.data.AnimatedGifEncoder;
-import xyz.n7mn.dev.sqlite.EarthQuakeDB;
+import xyz.n7mn.dev.sqlite.earthquake.EarthQuakeConnection;
 import xyz.n7mn.dev.sqlite.SQLite;
 import xyz.n7mn.dev.util.CommonUtils;
 import xyz.n7mn.dev.util.pair.Pair;
@@ -22,9 +26,9 @@ import xyz.n7mn.dev.util.pair.Pair;
 import javax.imageio.ImageIO;
 import java.awt.*;
 import java.awt.image.BufferedImage;
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.net.UnknownHostException;
+import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
@@ -34,7 +38,6 @@ import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.*;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 public class EarthQuakeYahooMonitor {
     //color data
@@ -71,7 +74,7 @@ public class EarthQuakeYahooMonitor {
     // Synced Map Data
     private JSONArray map;
     // EarthQuake Data
-    private final Map<String, EarthQuakeBigData> earthQuakes = new HashMap<>();
+    private final Map<String, EarthQuakeCache> earthQuakes = new HashMap<>();
     // Queue Request Image!
     private final List<Consumer<BufferedImage>> queue = new ArrayList<>();
     // Task and Worker
@@ -89,10 +92,10 @@ public class EarthQuakeYahooMonitor {
     // Instance Of JDA
     // TODO: Remove JDA.
     private final JDA JDA;
+    private final RenderingHints renderingHints = new RenderingHints(RenderingHints.KEY_TEXT_ANTIALIASING, RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
 
     public EarthQuakeYahooMonitor(JDA JDA) {
         this.JDA = JDA;
-
         try {
             this.positions = new JSONObject(new String(IOUtils.toByteArray(this.getClass().getResourceAsStream("/earthquake_area_data.json")), StandardCharsets.UTF_8));
 
@@ -110,13 +113,14 @@ public class EarthQuakeYahooMonitor {
     public void execute() {
         Date date = lastPing != 0 ? retry > 1
                 ? new Date(lastPing) : new Date(lastPing + 1000L)
-                //Sindo 4 Image 2022/11/09 17:40
-                : new Date(ZonedDateTime.ofInstant(Instant.now(), ZoneId.of("Asia/Tokyo")).toInstant().toEpochMilli());
+                : new Date(1667983225000L);
+        //Sindo 4 Image 2022/11/09 17:40
+        //: new Date(ZonedDateTime.ofInstant(Instant.now(), ZoneId.of("Asia/Tokyo")).toInstant().toEpochMilli());
 
         try {
-            BufferedImage bufferedImage = new BufferedImage(base.getWidth(), base.getHeight(), BufferedImage.TYPE_INT_RGB);
-            Graphics2D g2d = bufferedImage.createGraphics();
-            g2d.drawImage(base, 0, 0, null);
+            BufferedImage bufferedImage = new BufferedImage(base.getWidth() + 500, base.getHeight(), BufferedImage.TYPE_INT_RGB);
+            Graphics2D graphics2D = bufferedImage.createGraphics();
+            graphics2D.drawImage(base, 0, 0, null);
 
             String days = formatDays.format(date);
             String seconds = formatSeconds.format(date);
@@ -127,7 +131,9 @@ public class EarthQuakeYahooMonitor {
                     .get();
             JSONObject jsonObject = new JSONObject(document.text());
 
-            final boolean isEarthQuake = !jsonObject.isNull("hypoInfo");
+            final boolean isHypoInfo = !jsonObject.isNull("hypoInfo");
+            final boolean isPsWave = !jsonObject.isNull("psWave");
+            final boolean isEarthQuake = isHypoInfo || isPsWave;
             // 無駄に実行する必要はありません
             if (!isEarthQuake && this.queue.isEmpty()) {
                 //TODO: Clean Code
@@ -138,51 +144,70 @@ public class EarthQuakeYahooMonitor {
             JSONObject realTimeData = jsonObject.getJSONObject("realTimeData");
             String intensity = realTimeData.getString("intensity");
             byte[] bytes = intensity.getBytes(StandardCharsets.UTF_8);
-            getData(map != null && bytes.length == map.length());
-            if (map.length() != bytes.length) {
+            // intensityと位置情報が入った別のやつを同期させる (数があってないとき、情報がないとき)
+            syncData(map != null && bytes.length == map.length());
+            // 数があってないと基本的におかしいけど
+            // bytesのほうが多いときだけエラーを出すようにしてる。意図的だが、同じ時のほうが安定性はある
+            if (map.length() < bytes.length) {
                 throw new RuntimeException("Failed Sync");
-            }
-            // PS WAVE
-            JSONObject psWave = jsonObject.optJSONObject("psWave");
-            if (isEarthQuake && psWave != null) {
-                writePSWave(bufferedImage, psWave);
             }
             // EarthQuake の観測値をまとめるマップ
             Map<Pair<Double, Double>, Integer> hashMap = new HashMap<>();
             for (int i = 0; i < map.length(); i++) {
-                //ヤフーリアルタイムモニタの色の表示方法は byteを -100したときに残った数字です。
-                //最大で21段階あります
+                // ヤフーリアルタイムモニタの色の表示方法は byteを -100したときに残った数字です。
+                // 最大で21段階あります
                 final int by = bytes[i] - 100;
-                //-1は何も表示しません
+                // -1は何も表示しません
+                // 正直なぜ表示しないのかわからない、Yahoo Realtimeでも点滅してるのはそのせい。
                 if (by >= 0) {
                     final JSONArray array = map.getJSONArray(i);
                     final double latitude = array.getDouble(0);
                     final double longitude = array.getDouble(1);
-
                     hashMap.put(Pair.of(latitude, longitude), by);
                 }
             }
             // Yahooリアルタイムモニタでは震度が大きい順に上から表示されるので、上書きで正円が消えないように。
             // 小さい順にソートする。
-            List<Map.Entry<Pair<Double, Double>, Integer>> entries = hashMap.entrySet().stream().sorted(Comparator.comparingInt(Map.Entry::getValue))
-                    .collect(Collectors.toList());
-            // finally, you can write!
+            List<Map.Entry<Pair<Double, Double>, Integer>> entries = hashMap.entrySet().stream().sorted(Comparator.comparingInt(Map.Entry::getValue)).toList();
+            // やっと、位置情報を書くことができるよ！
             for (Map.Entry<Pair<Double, Double>, Integer> entry : entries) {
-                write(g2d, entry.getKey(), entry.getValue());
+                write(graphics2D, entry.getKey(), entry.getValue());
             }
-            writeHypoLocation(g2d, jsonObject);
-            g2d.dispose();
-            //TODO: ADD Text Options
-            BufferedImage finalImage = additionalText(bufferedImage, jsonObject, entries);
-            // メッセージを送ったり GIFに変えたりする機構
+            if (isPsWave) {
+                JSONObject psWave = jsonObject.getJSONObject("psWave");
+                writePSWave(graphics2D, psWave);
+            }
+            // キャッシュする理由は時々Yahoo EarthQuakeが欠損した状態で送ってくるという理由・・・。
+            // 正直ヤフー側の問題だし、意味分からないが修正せざる負えない。
+            if (isHypoInfo) {
+                JSONObject hypoInfo = jsonObject.getJSONObject("hypoInfo");
+                JSONArray items = hypoInfo.getJSONArray("items");
+                // Remove Checks
+                Set<String> order = earthQuakes.keySet();
+                // Caches And Remove Checks.
+                for (int i = 0; i < items.length(); i++) {
+                    JSONObject item = items.getJSONObject(i);
+                    String reportId = item.getString("reportId");
+                    EarthQuakeCache earthQuake = earthQuakes.computeIfAbsent(reportId, d -> new EarthQuakeCache());
+                    earthQuake.setCachedHypoInfo(item);
+                    //Remove KeySets...
+                    order.remove(reportId);
+                }
+                order.forEach(key -> {
+                    EarthQuakeCache earthQuakeCache = earthQuakes.remove(key);
+                    earthQuakeCache.asyncEncode();
+                });
+            }
+            additionalText(bufferedImage, graphics2D, isHypoInfo, realTimeData.getString("dataTime"), entries);
+            graphics2D.dispose();
             if (isEarthQuake) {
-                this.checkAndSendMessage(jsonObject, finalImage);
+                checkAndSendMessage(bufferedImage);
             } else {
-                this.reset();
+                reset();
             }
             //Events...
             for (Consumer<BufferedImage> queue : this.queue) {
-                queue.accept(finalImage);
+                queue.accept(bufferedImage);
             }
             this.queue.clear();
             retry = 0;
@@ -208,46 +233,29 @@ public class EarthQuakeYahooMonitor {
         return canEdit;
     }
 
-    public void checkAndSendMessage(JSONObject object, BufferedImage bufferedImage) {
-        JSONArray array = object.getJSONObject("hypoInfo").getJSONArray("items");
+    public void checkAndSendMessage(BufferedImage bufferedImage) {
         //BufferedImage を Byteに変換する。
         byte[] byteImage = CommonUtils.toByteArray(bufferedImage);
-        List<String> reportIds = new ArrayList<>() {{
-            for (int i = 0; i < array.length(); i++) {
-                String reportId = array.getJSONObject(i).getString("reportId");
-                EarthQuakeBigData earthQuakeBigData = earthQuakes.computeIfAbsent(reportId, d -> {
-                    final EarthQuakeBigData earthQuake = new EarthQuakeBigData();
-                    sent(byteImage, earthQuake::addSended);
-                    return earthQuake;
-                });
-                if (canEdit()) {
-                    earthQuakeBigData.editMessages(bufferedImage, byteImage);
-                } else {
-                    earthQuakeBigData.addRaw(bufferedImage);
-                }
-                add(reportId);
+        this.earthQuakes.values().forEach(earthQuake -> {
+            if (!earthQuake.isSended()) {
+                sent(byteImage, earthQuake::addSended);
+                earthQuake.setSended(true);
             }
-        }};
-        // reportIdが含まれていなかったら消す！
-        removeAndTry(reportIds);
-    }
-
-    public void removeAndTry(List<String> reportIds) {
-        earthQuakes.entrySet().stream()
-                .filter(key -> reportIds.stream().noneMatch(id -> key.getKey().equals(id)))
-                .forEach(entry -> {
-                    entry.getValue().asyncEncode();
-                    this.earthQuakes.remove(entry.getKey());
-                });
+            if (canEdit()) {
+                earthQuake.editMessages(bufferedImage, byteImage);
+            } else {
+                earthQuake.addRaw(bufferedImage);
+            }
+        });
     }
 
     public void reset() {
         this.retry = 0;
-        removeAndTry(Collections.emptyList());
+        this.earthQuakes.clear();
     }
 
     public void sent(byte[] bufferedImage, Consumer<Message> onCompletes) {
-        List<EarthQuakeDB.EarthQuakeData> data = SQLite.INSTANCE.getEarthQuake().getAll();
+        List<EarthQuakeConnection.EarthQuakeData> data = SQLite.INSTANCE.getEarthQuake().getAll();
         if (data.isEmpty()) {
             return;
         }
@@ -258,7 +266,7 @@ public class EarthQuakeYahooMonitor {
                 .setImage("attachment://earthquake.png")
                 .build();
 
-        data.stream().filter(EarthQuakeDB.EarthQuakeData::isAnnounceRealTime)
+        data.stream().filter(EarthQuakeConnection.EarthQuakeData::isAnnounceRealTime)
                 .forEachOrdered(earthQuakeData -> {
                     Guild guild = JDA.getGuildById(earthQuakeData.getGuild());
                     GuildMessageChannelUnion textChannel = guild != null ? guild.getChannelById(GuildMessageChannelUnion.class, earthQuakeData.getChannel()) : null;
@@ -268,60 +276,52 @@ public class EarthQuakeYahooMonitor {
                                 .queue(onCompletes);
                     }
                 });
+        System.out.println("[Yahoo-Realtime] およそ" + data.size() + "件送信");
     }
 
-    public BufferedImage additionalText(BufferedImage bufferedImage, JSONObject object, List<Map.Entry<Pair<Double, Double>, Integer>> entries) {
-        BufferedImage info = new BufferedImage(bufferedImage.getWidth() + 500, bufferedImage.getHeight(), BufferedImage.TYPE_INT_RGB);
-        Graphics2D g2dInformation = info.createGraphics();
+    public void additionalText(BufferedImage bufferedImage, Graphics2D graphics2D, final boolean isHypoInfo, String dateTime, List<Map.Entry<Pair<Double, Double>, Integer>> entries) {
+        graphics2D.setColor(BACKGROUND_COLOR);
+        graphics2D.fillRect(bufferedImage.getWidth() - 500, 0, bufferedImage.getWidth(), bufferedImage.getHeight());
+        graphics2D.setColor(Color.WHITE);
+        // Starting Position
+        final int width = bufferedImage.getWidth() - 500;
+        final int height = bufferedImage.getHeight();
+        //TODO
+        graphics2D.setRenderingHints(renderingHints);
+        graphics2D.drawString("これはベータ版です！色々な表示が変更される可能性が高いです", width, height - 20);
+        final long epochMilli = ZonedDateTime.parse(dateTime).toInstant().toEpochMilli();
+        final long calculatedLags = (System.currentTimeMillis() - epochMilli) / 1000;
 
-        g2dInformation.setColor(BACKGROUND_COLOR);
-        g2dInformation.fillRect(500, 0, bufferedImage.getWidth(), bufferedImage.getHeight());
-        g2dInformation.drawImage(bufferedImage, 0, 0, null);
-
-        g2dInformation.setColor(Color.WHITE);
-
-        final boolean isEarthQuake = !object.isNull("hypoInfo");
-
-        RenderingHints rh = new RenderingHints(RenderingHints.KEY_TEXT_ANTIALIASING,
-                RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
-        g2dInformation.setRenderingHints(rh);
-
-        g2dInformation.drawString("これはベータ版です！色々な表示が変更される可能性が高いです", bufferedImage.getWidth(), bufferedImage.getHeight() - 20);
-
-        final long epochMilli = ZonedDateTime.parse(object.getJSONObject("realTimeData").getString("dataTime")).toInstant().toEpochMilli();
-        final long error = (System.currentTimeMillis() - epochMilli) / 1000;
+        final int textPosition = width + 10;
         String time = DateFormat.getDateTimeInstance().format(epochMilli);
+        graphics2D.setFont(new Font("TimesRoman", Font.PLAIN, 20));
+        graphics2D.drawString(String.format("地震情報 %s (誤差: %d.3秒)", time, calculatedLags), textPosition, 25);
+        
+        drawLine(graphics2D, Color.GRAY, width, 40, bufferedImage.getWidth(), 40);
+        if (isHypoInfo) {
+            graphics2D.setColor(Color.YELLOW);
+            graphics2D.drawString("現在地震速報が発表されています (予報)", textPosition, 65);
+            graphics2D.setColor(Color.WHITE);
 
-        final int startingPos = bufferedImage.getWidth() + 10;
-
-        g2dInformation.setFont(new Font("TimesRoman", Font.PLAIN, 20));
-        g2dInformation.drawString(String.format("地震情報 %s (誤差: %d.3秒)", time, error), startingPos, 25);
-
-        //simple line
-        drawLine(g2dInformation, Color.GRAY, info.getWidth(), 40, bufferedImage.getWidth(), 40);
-
-        if (isEarthQuake) {
-            g2dInformation.setColor(Color.YELLOW);
-            g2dInformation.drawString("現在地震速報が発表されています (予報)", startingPos, 65);
-            JSONArray items = object.getJSONObject("hypoInfo").getJSONArray("items");
-            g2dInformation.setColor(Color.WHITE);
-            //2=325
-            for (int i = 0; i < items.length() && i < 2; i++) {
-                JSONObject item = items.getJSONObject(i);
-
-                int x = startingPos + 10;
+            List<EarthQuakeCache> caches = earthQuakes.values().stream().toList();
+            final int x = textPosition + 10;
+            for (int i = 0; i < caches.size() && i < 2; i++) {
+                EarthQuakeCache earthQuake = caches.get(i);
+                JSONObject item = earthQuake.getCachedHypoInfo();
                 int y = 100 * (i + 1) + (i * 25);
+                drawLine(graphics2D, Color.GRAY, textPosition, y - 25, textPosition, y + 100);
 
-                drawLine(g2dInformation, Color.GRAY, startingPos, y - 25, startingPos, y + 100);
-                g2dInformation.drawString(String.format("震源地 >>> %s (%s報)", item.getString("regionName"), getReportNum(item)), x, y);
-                g2dInformation.drawString(String.format("予測震度 >>> %s (M %s)", item.getString("calcintensity"), item.getString("magnitude")), x, 25 + y);
-                g2dInformation.drawString("予想深さ >>> " + item.getString("depth"), x, 50 + y);
-                g2dInformation.drawString((item.getBoolean("isCancel") ? "この地震速報はキャンセルされました" : "この地震速報はキャンセルされていません"), x, 85 + y);
+                graphics2D.drawString(String.format("震源地 >>> %s (%s報)", item.getString("regionName"), getReportNum(item)), x, y);
+                graphics2D.drawString(String.format("予測震度 >>> %s (M %s)", item.getString("calcintensity"), item.getString("magnitude")), x, 25 + y);
+                graphics2D.drawString("予想深さ >>> " + item.getString("depth"), x, 50 + y);
+                graphics2D.drawString((item.getBoolean("isCancel") ? "この地震速報はキャンセルされました" : "この地震速報はキャンセルされていません"), x, 85 + y);
             }
-        } else {
-            g2dInformation.drawString("現在地震速報は発表されていません", startingPos, 65);
+            //TODO: 地震情報が2より大きいことを 通知する
+            if (caches.size() > 2) {
+
+            }
         }
-        g2dInformation.setColor(Color.YELLOW);
+        graphics2D.setColor(Color.YELLOW);
         for (int i = entries.size(); i > entries.size() - 10 && i > 0; i--) {
             Map.Entry<Pair<Double, Double>, Integer> entry = entries.get(i - 1);
 
@@ -333,22 +333,18 @@ public class EarthQuakeYahooMonitor {
             JSONArray array = positions.optJSONArray(String.valueOf(entry.getKey().getKey()) + entry.getKey().getValue());
 
             final int size = (entries.size() - i) + 1;
-            final int v = isEarthQuake ? (int) (Math.min(2, object.getJSONObject("hypoInfo").getJSONArray("items").length()) * 162.5) : (int) 162.5;
-
+            final int v = earthQuakes.size() > 0 ? (int) (Math.min(2, earthQuakes.size()) * 162.5) : (int) 162.5;
             int y = v + 25 + size * 50;
-
             if (array != null) {
                 //県
-                g2dInformation.drawString(String.format("%s ➖ 震度 %s", array.getString(0), getSindo(entry.getValue())), startingPos, y);
-                g2dInformation.drawString(array.getString(1), startingPos + 25, y + 25);
+                graphics2D.drawString(String.format("%s ➖ 震度 %s", array.getString(0), getSindo(entry.getValue())), textPosition, y);
+                graphics2D.drawString(array.getString(1), textPosition + 25, y + 25);
             } else {
-                g2dInformation.drawString(String.format("不明 ➖ 震度 %s", getSindo(entry.getValue())), startingPos, y);
-                g2dInformation.drawString("不明", startingPos + 25, y + 25);
+                graphics2D.drawString(String.format("不明 ➖ 震度 %s", getSindo(entry.getValue())), textPosition, y);
+                graphics2D.drawString("不明", textPosition + 25, y + 25);
             }
         }
-        g2dInformation.dispose();
 
-        return info;
     }
 
     public String getReportNum(JSONObject object) {
@@ -412,7 +408,7 @@ public class EarthQuakeYahooMonitor {
     //left lng=116.45558291793395
     //right lng=153.74441708206723
     //bottom lat=23.64048885571455
-    public void writePSWave(@NotNull BufferedImage bufferedImage, @NotNull JSONObject psWave) {
+    public void writePSWave(Graphics2D graphics2D, @NotNull JSONObject psWave) {
         JSONArray items = psWave.getJSONArray("items");
         for (int i = 0; i < items.length(); i++) {
             JSONObject item = items.optJSONObject(i);
@@ -422,16 +418,15 @@ public class EarthQuakeYahooMonitor {
             String pRadiusString = item.optString("pRadius");
             String sRadiusString = item.optString("sRadius");
             //Yahoo EarthQuake: なぜか知らないけど、Yahoo EarthQuakeが時々欠損した状態で送ってくる
-            if (pRadiusString == null || sRadiusString == null) {
-                return;
-            }
             Pair<Double, Double> pixelXY = convertGeoToPixel(Double.parseDouble(item.getString("latitude").replaceAll("N", "")), Double.parseDouble(item.getString("longitude").replaceAll("E", ""))
                     , 1200, 900, 116.45558291796095, 153.74441708208371, 23.640487987015774);
+            graphics2D.drawImage(hypo, pixelXY.getKey().intValue() - (hypo.getWidth() / 2), pixelXY.getValue().intValue() - (hypo.getHeight() / 2), null);
+            if (pRadiusString == null || sRadiusString == null || pRadiusString.isEmpty() || sRadiusString.isEmpty()) {
+                return;
+            }
 
             final int pRadius = (int) Double.parseDouble(pRadiusString);
             final int sRadius = (int) Double.parseDouble(sRadiusString);
-
-            Graphics2D graphics2D = bufferedImage.createGraphics();
 
             graphics2D.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
             graphics2D.setColor(new Color(255, 0, 0, 50));
@@ -443,27 +438,17 @@ public class EarthQuakeYahooMonitor {
             graphics2D.fillOval(pixelXY.getKey().intValue() - (pRadius / 2), pixelXY.getValue().intValue() - (pRadius / 2), pRadius, pRadius);
             graphics2D.setColor(Color.BLUE);
             graphics2D.drawOval(pixelXY.getKey().intValue() - (pRadius / 2), pixelXY.getValue().intValue() - (pRadius / 2), pRadius, pRadius);
-
-            /*graphics2D.drawImage(hypo, pixelXY.getKey().intValue() - (hypo.getWidth() / 2), pixelXY.getValue().intValue() - (hypo.getHeight() / 2), null);*/
-            graphics2D.dispose();
         }
     }
 
-    public void writeHypoLocation(Graphics2D graphics2D, JSONObject object) {
-        JSONObject psWave = object.optJSONObject("psWave");
-
-        if (psWave != null) {
-            JSONArray items = psWave.getJSONArray("items");
-
-            for (int i = 0; i < items.length(); i++) {
-                JSONObject item = items.getJSONObject(i);
-
-                Pair<Double, Double> pixelXY = convertGeoToPixel(Double.parseDouble(item.getString("latitude").replaceAll("N", "")), Double.parseDouble(item.getString("longitude").replaceAll("E", ""))
-                        , 1200, 900, 116.45558291796095, 153.74441708208371, 23.640487987015774);
-
-                //Hypo Location
-                graphics2D.drawImage(hypo, pixelXY.getKey().intValue() - (hypo.getWidth() / 2), pixelXY.getValue().intValue() - (hypo.getHeight() / 2), null);
-            }
+    public void writeHypoLocation(Graphics2D graphics2D, JSONObject psWave) {
+        JSONArray items = psWave.getJSONArray("items");
+        for (int i = 0; i < items.length(); i++) {
+            JSONObject item = items.getJSONObject(i);
+            Pair<Double, Double> pixelXY = convertGeoToPixel(Double.parseDouble(item.getString("latitude").replaceAll("N", "")), Double.parseDouble(item.getString("longitude").replaceAll("E", ""))
+                    , 1200, 900, 116.45558291796095, 153.74441708208371, 23.640487987015774);
+            //Hypo Location
+            graphics2D.drawImage(hypo, pixelXY.getKey().intValue() - (hypo.getWidth() / 2), pixelXY.getValue().intValue() - (hypo.getHeight() / 2), null);
         }
     }
 
@@ -509,7 +494,7 @@ public class EarthQuakeYahooMonitor {
     }
 
 
-    public void getData(boolean f) throws IOException {
+    public void syncData(boolean f) throws IOException {
         if (!synced && !f) {
             throw new RuntimeException("Failed Sync");
         } else if (!f) {
@@ -557,9 +542,11 @@ public class EarthQuakeYahooMonitor {
         return new Pair<>(x, y);
     }
 
-    private static class EarthQuakeBigData {
+    private static class EarthQuakeCache {
+        private JSONObject cachedHypoInfo;
         private List<Message> sended = new ArrayList<>();
         private List<BufferedImage> raw = new ArrayList<>();
+        private boolean isSended;
         private long length = 0;
 
         public List<BufferedImage> getRaw() {
@@ -592,29 +579,62 @@ public class EarthQuakeYahooMonitor {
             new Thread(this::encode).start();
         }
 
+        public JSONObject getCachedHypoInfo() {
+            return cachedHypoInfo;
+        }
+
+        public void setCachedHypoInfo(JSONObject cachedHypoInfo) {
+            this.cachedHypoInfo = cachedHypoInfo;
+        }
+
+        public boolean isSended() {
+            return isSended;
+        }
+
+        public void setSended(boolean sended) {
+            isSended = sended;
+        }
+
         public void encode() {
-            ByteArrayOutputStream output = new ByteArrayOutputStream();
-            AnimatedGifEncoder encoder = new AnimatedGifEncoder();
-            encoder.setFrameRate(1);
-            encoder.start(output);
-            for (BufferedImage bufferedImage : this.raw) {
-                encoder.addFrame(bufferedImage);
-            }
-            if (encoder.finish()) {
-                byte[] bytes = output.toByteArray();
+            SeekableByteChannel seekableByteChannel = null;
+            try {
+                ByteBuffer byteBuffer = ByteBuffer.allocate((int) length);
+                seekableByteChannel = new ByteBufferSeekableByteChannel(byteBuffer, (int) length);
+                AWTSequenceEncoder encoder = new AWTSequenceEncoder(seekableByteChannel, Rational.ONE);
+                for (BufferedImage bufferedImage : raw) {
+                    encoder.encodeImage(bufferedImage);
+                }
+                encoder.finish();
+                byte[] bytes = byteBuffer.array();
                 EmbedBuilder embedBuilder = new EmbedBuilder()
-                        .setTitle("地震速報 [GIF REPLAY!]")
+                        .setTitle("地震速報 [MP4 REPLAY!]")
                         .setDescription("すべての情報は予測です | 大きな誤差・誤検知を含んでいる可能性があります")
                         .setFooter(DateFormat.getDateTimeInstance().format(new Date()) + "に作成されました | 防災科研（NIED）| Yahoo")
-                        .setImage("attachment://earthquake.gif");
+                        .setImage("attachment://earthquake.mp4");
                 if (length > 25000000) {
                     embedBuilder.addField("⚠途中で途切れている可能性があります", "サイズが足りませんでした (25MB)", false);
                 }
                 this.sended.forEach(action -> action.editMessageEmbeds(embedBuilder.build())
-                        .setFiles(FileUpload.fromData(bytes, "earthquake.gif"))
+                        .setFiles(FileUpload.fromData(bytes, "earthquake.mp4"))
                         .queue());
+                remove();
+            } catch (Exception e) {
+                e.printStackTrace();
+            } finally {
+                NIOUtils.closeQuietly(seekableByteChannel);
             }
-            remove();
+
+
+            /*ByteArrayOutputStream output = new ByteArrayOutputStream();
+            AnimatedGifEncoder encoder = new AnimatedGifEncoder();
+            // 処理が非常に遅くなるが非同期なので気にしたらいけない。
+            encoder.setQuality(1);
+            encoder.setFrameRate(1);
+            encoder.start(output);
+            for (BufferedImage bufferedImage : this.raw) {
+                encoder.addFrame(bufferedImage);
+            }*/
+
         }
 
         public void remove() {
